[tool.poetry]
name = "rasa_sort_content"
version = "0.1.0"
description = "Helps sort the yaml content of a rasa bot"
authors = ["hsm207 <hsm207@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.9"
PyYAML = "^6.0"
click = "^8.0.3"
rasa = "^2.8.12"
scipy = "~1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
